# Git-leaks

./: .gitignore  Cargo.toml  README.md  findings.enc
.github/: labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  crypto.rs  finding.rs  main.rs  orphans.rs  output.rs  patterns.rs  scanner.rs  validate.rs
