[package]
name = "git-leaks"
version = "0.0.1"
edition = "2021"

[dependencies]
gix = { version = "0.72", features = ["max-performance"] }
regex = "1"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
rpassword = "7"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
